--- a/css/style.css
+++ b/css/style.css
@@ -109,44 +109,28 @@ blockquote .author {
 
 /* STEP SPECIFIC STYLES */
 #title {width: 1240px; height: 600px; text-align: left; }
-#title-text1 { font-size: 102px; }
-#title-text2 { font-size: 153px; }
-#title-text3 { font-size: 141px; }
+#title-text1 { font-size: 153px; }
+#title-text2 { font-size: 94px; }
+#title-text3 { font-size: 134px; }
 
-#respond-text1 { font-size: 84px; }
-#respond-text2 { font-size: 202px; }
-#respond-text3 { font-size: 77px; }
+#brain-text1 { font-size: 84px; }
+#brain-text2 { font-size: 202px; }
 
-#ar-adaptive { font-size: 192px; }
-#ar-adaptive-fixed { font-size: 54px; }
-#ar-responsive { font-size: 153px; }
-#ar-responsive-fluid { font-size: 57px; }
+#cl1 { font-size: 54px; }
+#cl2 { font-size: 178px; }
 
-#combo-text { font-size: 247px; }
-#combo-or { position: relative; left: -20px; }
-#combo-fluid-fixed div { float: left; text-align: center; }
-#combo-plus { width: 10%; font-size: 100px; }
-#combo-fixed, #combo-fluid { width: 45%; }
-#combo-fluid-fixed div .bold { font-size: 63px; width: 100%; }
-#combo-fluid-fixed div .light { font-size: 50px; width: 100%; }
-#combo-fluid .light { letter-spacing: 3px; }
+#ex1 { font-size: 168px; }
+#ex2 { font-size: 94px; }
 
-#why-sml { letter-spacing: 19px; font-size: 37px; position: relative; left: 10px; }
-#why-one-site { font-size: 200px; }
-#why-every { font-size: 94px; }
+#stress-type { letter-spacing: 19px; font-size: 37px; position: relative; left: 10px; }
+#stress1 { font-size: 150px; }
+#stress2 { font-size: 135px; }
+#stress3 { font-size: 140px; }
 
-#who-real-not { font-size: 36px; padding-bottom: 10px; position: relative; left: 3px; }
-#who-real-real { font-size: 93px; }
-#who-bg { font-size: 91px; }
-#who-bg-desc { font-size: 36px; padding-top: 10px; }
-#who-obama { font-size: 102px; }
-#who-obama-desc { font-size: 20px; padding-top: 10px; }
-#who-greygoose { font-size: 88px; }
-#who-greygoose-desc { font-size: 25px; padding-top: 10px; margin-left: 8px; }
-#who-cac { font-size: 80px; }
-#who-cac-desc { font-size: 35px; padding-top: 10px; }
-#who-more { font-size: 90px; }
-#who-more a { font-size: 60px; }
+#how1, #how2, #how3 { font-size: 175px; }
+#how1a { font-size: 63px; }
+#how2a {font-size: 78px; }
+#how3a { font-size: 78px; }
 
 #when-things div { font-size: 87px; }
 #when-thing1, #when-thing2, #when-thing1, #when-thing1 { position: relative; padding: 0; }
@@ -154,22 +138,6 @@ blockquote .author {
 #when-thing2 { left: 10px; font-size: 93px; letter-spacing: 0; }
 #when-thing3 { font-size: 120px; }
 #when-thing4 { font-size: 190px; }
-
-#how-quote blockquote { text-align: center; font-size: 70px; line-height: 1.2; }
-#how-frameworks-text { font-size: 129px; line-height: .9; }
-#how-frameworks span { font-weight: 800; font-size: 45px; display: block; }
-#how-savetime { position: relative; left: 20px; letter-spacing: 40px; font-size: 83px; }
-#how-rollyourown { font-size: 103px; }
-#how-control { position: relative; left: 12px; letter-spacing: 20px; font-size: 68px; }
-#how-best { font-size: 117px; }
-#how-best1 { font-size: 118px; }
-#how-best2 { font-size: 147px; }
-#how-best2-small { font-size: 150px; }
-#how-best3 { font-size: 119px; }
-#how-best3-exit { font-size: 114px; }
-#how-best4 { font-size: 115px; }
-#how-best5 { font-size: 82px; }
-#how-best6 .extralight { letter-spacing: 7px; }
 
 .adj-j { font-size: 88%; position: relative; top: -10px; }
 
